<resources>
    <string name="app_name">ChatApp</string>
    <string name="loading">Loading…</string>
    <string name="msg_no_data">No data found</string>
    <string name="chat">Chat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_chatapp">Welcome to ChatApp</string>
    <string name="empty" />
    <string name="enter_password">Enter Password</string>
    <string name="enter_user_name">Enter UserName</string>
    <string name="login">Login</string>
    <string name="job_order_string">Job Order no.</string>
    <string name="filter_heading">Filter the Job order</string>
    <string name="filter">filter</string>
    <string name="chat_group">Chat Group</string>
    <string name="are_you_want_to_exit">Are you want to exit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_chat_group_available">No Chat group Available</string>
    <string name="select_job_type">Select job type</string>
    <string name="selected_item">Selected item:</string>
    <string name="select_job_category">Select job category</string>
    <string name="enter_job_order_no">Enter Job order no.</string>
    <string name="job_order_filter">Job Order Filter</string>
    <string name="message">Message</string>
    <string name="audio">Audio</string>
    <string name="camera">Camera</string>
    <string name="capture">Capture</string>
    <string name="stop">Stop</string>
    <string name="Idle">idle</string>
    <string name="cancel">Cancel</string>
    <string name="proceed">Proceed</string>
    <string name="no_job_orders_found">No Job orders found</string>
    <string name="select_job_order">Select Job Order</string>
    <string name="add_group_name">Add Group Name</string>
    <string name="start_chat">start chat</string>
    <string name="search_user">Search User</string>
    <string name="create_group">Create Group</string>
    <string name="alert">Alert</string>
    <string name="error">Error</string>
    <string name="confirm">Confirm</string>
    <string name="please_select_atleast_2">Please select Atleast 2 users</string>
    <string name="pls_conf_to_create_grp">Please confirm to Create Group</string>
    <string name="done">Done</string>
    <string name="add_members">Add Members</string>
    <string name="add_more_users">Add More Users</string>
    <string name="select_users">Select users</string>
    <string name="users">Users</string>
</resources>