<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/dimen_8dp"
    app:cardUseCompatPadding="true"
    tools:context=".ui.camera.MediaPreviewDialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imgView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:visibility="gone" />

            <VideoView
                android:id="@+id/videoViewer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

        </FrameLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_color" />

        <LinearLayout
            android:id="@+id/llBtns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/dimen_15dp"
                android:text="@string/no"
                android:textSize="@dimen/font_18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/dimen_1dp"
                android:layout_height="match_parent"
                android:background="@color/grey_color" />

            <TextView
                android:id="@+id/tvProceed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/dimen_15dp"
                android:text="@string/proceed"
                android:textColor="@color/color_accent"
                android:textSize="@dimen/font_18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>